--- a/page2.html
+++ b/page2.html
@@ -17,9 +17,14 @@
         <button id="submitBtn" class="submitBtn">Подтвердить</button>
       </div>
       <h3 id="h3"></h3>
-      <div class="forecast" id="forecast"></div>
+      <div class="todayForecast">
+        <div class="card" id="card"></div>
+      </div>
+      <div class="dayHourForecast" id="dayHourForecast">
+        <div class="hoursCard" id="hoursCard"></div>
+      </div>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/page2.js"></script>
   </body>
 </html>
